@@ -4559,4 +4559,7 @@
          section (Sergio).
 20130910 uimedia.c,ui/uimedia.h: add missing subversion properties (Sergio).
 20130914 debugger/{debugger.h,disassemble.c},ui/gtk/{debugger.c,gtkinternals.h,
-         gtkui.c}: improve scrolling of disassembly list on GTK UI (Sergio).
+         gtkui.c}: improve scrolling of disassembly list on GTK UI (patch #316)
+         (Sergio).
+20130914 debugger/debugger.h,ui/gtk/gtkui.c: ensure exiting on GTK UI when there
+         are active breakpoints (fixes bug #301) (Sergio).
